# rbares_common

./: README.md
binaries/: install.sh  ros-melodic-  ros-melodic-icp-pose-corrector_0.0.0-0bionic_amd64.deb  ros-melodic-rbares-controller_0.0.0-0bionic_amd64.deb  ros-melodic-rbares-elevator-controller_0.0.0-0bionic_amd64.deb  ros-melodic-rcomponent_1.1.0-0bionic_amd64.deb  ros-melodic-robotnik-docker_1.0.0-0bionic_amd64.deb  ros-melodic-robotnik-move_1.0.0-0bionic_amd64.deb  ros-melodic-robotnik-msgs_1.1.0-0bionic_amd64.deb  (+1 more)
rbares_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbares_description/launch/: rbares_rviz.launch  rbares_state.launch
rbares_description/meshes/bases/: battery_case_v2.stl
rbares_description/robots/: rbares_std.urdf.xacro
rbares_description/urdf/astra_camera/: embedded_s.urdf.xacro  orbbec_astra.urdf.xacro
rbares_description/urdf/bases/: battery_case.urdf.xacro  front_case.urdf.xacro  mimic_base_link.urdf.xacro  protection.urdf.xacro  rbares.urdf.xacro
rbares_description/urdf/elevator/: fork.urdf.xacro  fork_test.urdf.xacro
rbares_description/urdf/epal_pallet/: epal_pallet.urdf.xacro
rbares_description/urdf/led/: led2.urdf.xacro
rbares_description/urdf/projector/: projector.urdf.xacro
rbares_description/urdf/wheels/: castor_wheel.urdf.xacro  fork_wheel.urdf.xacro  motor_wheel.urdf.xacro
rbares_localization_3d/: CMakeLists.txt  package.xml
rbares_localization_3d/config/: rslidar_16_aloam.rviz  rslidar_16_mcl_3dl.rviz  rslidar_16_mcl_3dl.yaml
rbares_localization_3d/launch/: localization_complete.launch  map_server.launch  slam_complete.launch  visualization.launch
rbares_localization_3d/launch/aloam/: .rslidar_16_aloam_mapping.launch.swp  rslidar_16_aloam_mapping.launch  rslidar_16_aloam_odometry.launch  rslidar_16_aloam_registration.launch  rslidar_16_aloam_visualization.launch
rbares_localization_3d/launch/mcl_3dl/: rslidar_16_mcl_3dl.launch
rbares_localization_3d/test/: README.md  play_robotnik.launch
(+49 files in other folders)
