<?xml version="1.0"?>
<package>
  <name>rbares_description</name>
  <version>0.0.1</version>
  <description>The rbares_description package</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rjulia@robotnik.es">Raquel Julia</maintainer>

  <url type="website">http://wiki.ros.org/rbares_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbares_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbares_common/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>

  <export>
      <gazebo_ros gazebo_media_path="package://rbares_description/meshes/bases"/>
  </export>
</package>
