<?xml version="1.0"?>
<package>
  <name>rbares_localization_3d</name>
  <version>1.1.3</version>
  <description>The rbares_localization_3d package</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
